[B]Version 1.1.42[/B]
pornwild - new site
xvideos - pornstars listing fixed
xvideos - tags pagination fixed