@@ -2,3 +2,4 @@
 pornwild - new site
 xvideos - pornstars listing fixed
 xvideos - tags pagination fixed
+chaturbate - listing fixed
